* enhancements
  * Get the page number for the json response from the will_paginate resultset.

== 0.2.0

* enhancements
  * Navigator options fully supported.

* bug fix
  * Get pager id from the options hash in any of the formats accepted by
    jqGrid.